styles.css
body {
  background-image: url("assets/bg-masthead.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  min-height: calc(100vh - 16px);
}

#black-readable {
  background-color: #00000097;
  padding-bottom: 20px;
  border-radius: 20px;
}

.text-center {
  background-color: #000000;
  background-image: linear-gradient(40deg, #ffffff, #7c7c7c );
  background-size: 100%;
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
  background-clip: text;
  text-align: center;
  font-family: "Segoe UI", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

/* navbar */

ul {
  text-align: center;
  list-style-type: none;
  margin: auto;
  padding: 0;
  overflow: hidden;
  background-color: #4b4949;
  opacity: 100%;
  border-radius: 60px;
  line-height: 40px;
}

li {
  display: inline-block;
  opacity: 100%;
  font-family: "Segoe UI", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

li a {
  color: white;
  text-align: center;
  padding: 14px 40px;
  text-decoration: none;
}

li a:hover:not(.active) {
background-color: #111;
}

.active {
background-color: #04AA6D;
}

h1 {
  margin-top: 15px;
  margin-bottom: 20px;
}

#ian {
  width: 40%;
  max-width: 320px;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
  border-radius: 50px;
  position: relative;
  top: 20px;
  margin-bottom: 20px;
} 

/*form*/

.form {
  margin-left: auto;
  margin-right: auto;
  background-color: rgba(0, 112, 209, 0.76);
  border-radius: 60px;
  max-width: 75%;
}

form
{
  text-align: center;
}

.form-elements{
  margin-left: auto;
  margin-right: auto;
}

fieldset {  
  border-top-style: hidden;
  border-right-style: hidden;
  border-left-style: hidden;
  border-bottom-style: hidden;
  padding-top: 15px;
  padding-bottom: 6px;
}

label{
  color:white;
  font-family: "Segoe UI", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  text-align: center;
}

input {
  width: 50%;
  padding: 12px 10px;
  margin: 8px 0;
  display: block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
}
textarea {
  width: 100%;
  padding: 12px 10px;
  margin: auto ;
  display: block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

button {
  margin-bottom: 15px;
  font-size: large;
}

/* phones, 600px - */
@media only screen and (max-width: 600px) {
  h1 {
    font-size: 30px;
  }
  #intro {
    font-size: 20px;
  }
  #contactinfo {
    font-size: 20px;
  }
  li a {
    margin-left: auto;
    margin-right: auto;
    padding: 32px;
    font-size: 13px;
  }
  input {
    font-size: 9px;
  }
  img {
    max-width: 50%;
  }
}


/* large phone, tablets, 600px + */
@media only screen and (min-width: 600px) {
  h1 {
      font-size: 40px;
  }
  #intro {
      font-size: 25px;
  }
}

/* Landscape tablets, 768px + */
@media only screen and (min-width: 768px) {
  h1 {
      font-size: 50px;
  }
  #intro {
      font-size: 25px;
  }
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
  h1 {
      font-size: 60px;
  }
  #intro {
      font-size: px;
  }
  
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
  h1 {
      font-size: 70px;
  }
  #intro {
      font-size: 30px;
  }
}

/*Animation*/
.fade-in {
  animation: fadeIn 3s;
  -webkit-animation: fadeIn 3s;
  -moz-animation: fadeIn 3s;
  -o-animation: fadeIn 3s;
  -ms-animation: fadeIn 3s;
  animation-fill-mode: backwards;
}

#intro {
  animation-delay: 2s;
  -webkit-animation-delay: 2s;
  -moz-animation-delay: 2s;
  -o-animation-delay: 2s;
  -ms-animation-delay: 2s;
}

#ian {
  animation-delay: 4s;
  -webkit-animation-delay: 4s;
  -moz-animation-delay: 4s;
  -o-animation-delay: 4s;
  -ms-animation-delay: 4s;
}

@keyframes fadeIn {
0% { opacity: 0; }
100% { opacity: 1; }
}

@-moz-keyframes fadeIn {
0% { opacity: 0; }
100% { opacity: 1; }
}

@-webkit-keyframes fadeIn {
0% { opacity: 0; }
100% { opacity: 1; }
}

@-o-keyframes fadeIn {
0% { opacity: 0; }
100% { opacity: 1; }
}

@-ms-keyframes fadeIn {
0% { opacity: 0; }
100% { opacity: 1; }
}

